# Document-QA-Chatbot

./: README.md  app.py  main.py  pyproject.toml  requirement.txt  simpleapp.py
